feat: create input and button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 <body>
     <h1>Lista de Tarefas</h1>
+    <input type="text" id="tarefa" placeholder="Digite uma tarefa">
+    <button id="addBtn">Adicionar</button>
     <script src="script.js"></script>
 </body>
+
 
 </html>
