feat: implement task creation logic

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
 <body>
     <h1>Lista de Tarefas</h1>
-    <input type="text" id="tarefa" placeholder="Digite uma tarefa">
+    <input type="text" id="task" placeholder="Digite uma tarefa">
     <button id="addBtn">Adicionar</button>
+    <ul id="list"></ul>
     <script src="script.js"></script>
 </body>
 
