--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Lista de Tarefas</h1>
     <input type="text" id="task" placeholder="Digite uma tarefa">
+    <button id="clearBtn">Limpar</button>
     <button id="addBtn">Adicionar</button>
     <ul id="list"></ul>
     <script src="script.js"></script>
