--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <input type="text" id="task" placeholder="Digite uma tarefa">
     <button id="addBtn">Adicionar</button>
     <button id="clearBtn">Limpar</button>
+    <p>Total: <span id="taskCount">0</span></p>
     <ul id="list"></ul>
     <script src="script.js"></script>
 </body>
-
 
 </html>
